examples/traefik-v1.7/kubernetes/advanced-separate-pod/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
  selector:
    app: whoami
